[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.0.1"
authors = [
    { name = "Nisse Knudsen", email = "nisse@make87.com" },
]
dependencies = [
    "make87",
    "make87_messages",
    "opencv-python-headless>=4.10.0.84,<5.0.0",
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9,<3.13"
